major docker size optimization and minor code review fixes